主数据 创建表、新增列、修改列、删除列等功能